# texte

./: LICENSE  Projetos_ABAPA.ipynb  app.py  convidados.csv  cv.csv  lista.xlsx  pyproject.toml  qnt.xlsx
