[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "streamlit-convidados"
version = "0.1.0"
description = "Aplicação Streamlit para controle de convidados"
authors = ["Seu Nome <seuemail@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"  # Ajuste para a versão do Python que está usando
streamlit = "^1.40.0"
pandas = "^2.0.0"
openpyxl = "^3.0.0"
